--- a/Tweekipedia/App_GlobalResources/Resources.ja.resx
+++ b/Tweekipedia/App_GlobalResources/Resources.ja.resx
@@ -132,6 +132,9 @@
   <data name="input_error" xml:space="preserve">
     <value>URLが無効です。このサービスは「https://**.wikipedia.org/wiki/記事タイトル」のような記事のみを対象としています。</value>
   </data>
+  <data name="lang" xml:space="preserve">
+    <value>ja</value>
+  </data>
   <data name="secondMsg" xml:space="preserve">
     <value>2, ツイートボタンを押すか、以下のURLをコピーしてください。</value>
   </data>
